--- a/res/xml/audio_tweaks.xml
+++ b/res/xml/audio_tweaks.xml
@@ -71,6 +71,12 @@
             android:defaultValue="false" />
 
         <SwitchPreference
+            android:key="audio_effects_jdsp"
+            android:title="@string/audio_effects_jdsp_title"
+            android:summary="@string/audio_effects_jdsp_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
             android:key="audio_effects_dolby"
             android:title="@string/audio_effects_dolby_title"
             android:summary="@string/audio_effects_dolby_summary"
