--- a/res/xml/power_save.xml
+++ b/res/xml/power_save.xml
@@ -115,6 +115,12 @@
         android:defaultValue="false"
         android:dependency="baikalos_app_freezer_enabled"/>
 
+    <com.aicp.gear.preference.GlobalSettingSwitchPreference
+        android:key="baikalos_keep_freezed"
+        android:title="@string/keep_freezed_title"
+        android:summary="@string/keep_freezed_summary"
+        android:defaultValue="false"
+        android:dependency="baikalos_app_freezer_enabled"/>
 
     <PreferenceCategory
         android:key="powersave_gms"
